Some pipeline fixes to manage the different Bicleaner flavours

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,8 @@ services:
         build:
             context: .
             dockerfile: Dockerfile
-        #environment:
+        environment:
+            - datapath=/work/models
         networks:
             - dat-network
         volumes:
