Added bangla tokenizer

--- a/deployment/requirements.txt
+++ b/deployment/requirements.txt
@@ -1,13 +1,14 @@
 fastspell==0.9.1
-nltk
+nltk==3.8.1
 docopt
 xxhash>=2.0.0
-sacremoses
-mecab-ko
-nlpashto
-reldi-tokeniser
+sacremoses==0.0.53
+mecab-ko==1.0.1
+#nlpashto
+reldi-tokeniser==1.0.3
 #icu-tokenizer
-pyidaungsu
-sinling
-fitrat
-mahaNLP
+pyidaungsu==0.1.4
+sinling==0.3.6
+fitrat==0.0.9
+mahaNLP==0.9
+bnlp-toolkit==3.3.2
