--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,8 @@
     "node": "^18.14.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-loader-spinner": "^6.1.6",
+    "react-widgets": "^5.8.4",
     "recharts": "^2.9.3"
   }
 }
