Added functional docker-compose file

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,11 +11,35 @@ services:
         networks:
             - dat-network
         volumes:
-            - ./yaml_dir:/work/yaml_dir
-            - ./uploaded_corpora:/work/uploaded_corpora
+            - dat-yaml-volume:/work/yaml_dir
+            - dat-corpora-volume:/work/uploaded_corpora
         ports:
-            - "8000:8000"
-#volumes:
-networks:
-    dat-network:                
+            - "5000:8000"
+    dat-front:
+        container_name: dat-front
+        image: dat-front:latest
+        build:
+            context: ./front
+            dockerfile: Dockerfile
+        ports:
+            - "8000:3000"
+        networks:
+            - dat-network
+        volumes:
+            - dat-yaml-volume:/yaml_dir
 
+volumes:
+    dat-corpora-volume:    
+        driver: local
+        driver_opts:
+            device: ./uploaded_corpora
+            o: bind
+            type: local
+    dat-yaml-volume:
+        driver: local
+        driver_opts:
+            device: ./yaml_dir
+            o: bind
+            type: local
+networks:
+    dat-network:
