--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "all-iso-language-codes": "^1.0.12",
+    "axios": "^1.6.7",
     "fs": "0.0.1-security",
     "html-to-image": "^1.11.11",
     "js-yaml": "^4.1.0",
