--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "all-iso-language-codes": "^1.0.12",
     "axios": "^1.6.7",
+    "formidable": "^3.5.1",
     "fs": "0.0.1-security",
     "html-to-image": "^1.11.11",
     "js-yaml": "^4.1.0",
@@ -22,8 +23,10 @@
     "node": "^18.14.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.50.1",
     "react-loader-spinner": "^6.1.6",
     "react-widgets": "^5.8.4",
-    "recharts": "^2.9.3"
+    "recharts": "^2.9.3",
+    "stream": "^0.0.2"
   }
 }
