Added cmd button working

--- a/front/package.json
+++ b/front/package.json
@@ -22,9 +22,11 @@
     "next-yaml": "^1.0.1",
     "node": "^18.14.0",
     "react": "^18",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-loader-spinner": "^6.1.6",
+    "react-toastify": "^10.0.4",
     "react-widgets": "^5.8.4",
     "recharts": "^2.9.3",
     "stream": "^0.0.2"
