--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "all-iso-language-codes": "^1.0.12",
     "axios": "^1.6.7",
+    "canvg": "^4.0.1",
     "formidable": "^3.5.1",
     "fs": "0.0.1-security",
     "html-to-image": "^1.11.11",
