--- a/front/package.json
+++ b/front/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.50.1",
     "react-loader-spinner": "^6.1.6",
     "react-toastify": "^10.0.4",
+    "react-tooltip": "^5.26.3",
     "react-widgets": "^5.8.4",
     "recharts": "^2.9.3",
     "stream": "^0.0.2"
