Added yaml lite reports for az, bn, et, lv, ur

--- a/reports/mono-1.2/HPLT-docslite.az.yaml
+++ b/reports/mono-1.2/HPLT-docslite.az.yaml
@@ -1,3 +1,4 @@
+corpus: HPLT-docslite.az.tsv
 docs_avg_lm: '[[0.0, 24], [0.1, 1139], [0.2, 13402], [0.3, 62158], [0.4, 261463],
   [0.5, 447105], [0.6, 286037], [0.7, 24208], [0.8, 790], [0.9, 15]]'
 docs_collections: '[["wide16", 455469], ["cc40", 295164], ["wide17", 186839], ["wide15",
@@ -311,7 +312,6 @@ docs_wds: '[[0.0, 59652], [0.1, 3161], [0.2, 1565], [0.3, 1815], [0.4, 1730], [0
   [8.7, 17783], [8.8, 16806], [8.9, 16301], [9.0, 14611], [9.1, 13969], [9.2, 12298],
   [9.3, 10700], [9.4, 9328], [9.5, 7633], [9.6, 6364], [9.7, 4706], [9.8, 3130], [9.9,
   1364], [10.0, 275]]'
-corpus: HPLT-docslite.az.tsv
 sentence_pairs: 139346876
 src_bytes: 8.99 GB
 src_sent_tokens: '[[0, 3193803], [1, 27105417], [2, 15671616], [3, 10914390], [4,
@@ -909,7 +909,7 @@ src_sent_tokens: '[[0, 3193803], [1, 27105417], [2, 15671616], [3, 10914390], [4
   [143791, 1], [175581, 1], [179316, 1], [193357, 1], [215849, 1]]'
 src_sent_tokens_mean: 11
 src_sent_tokens_median: 5
-src_tokens: 0
+src_tokens: 1493498177
 src_unique_sents: '[[0, 1], [1, 212670], [2, 605612], [3, 869907], [4, 1051459], [5,
   1154754], [6, 1316775], [7, 1234767], [8, 1246353], [9, 1195031], [10, 1001445],
   [11, 863418], [12, 726622], [13, 701140], [14, 618590], [15, 510697], [16, 441496],
