Added stats with langcount for az and  nb

--- a/reports/mono-1.2/HPLT-docslite.az.yaml
+++ b/reports/mono-1.2/HPLT-docslite.az.yaml
@@ -314,6 +314,37 @@ docs_wds: '[[0.0, 59652], [0.1, 3161], [0.2, 1565], [0.3, 1815], [0.4, 1730], [0
   1364], [10.0, 275]]'
 sentence_pairs: 139346876
 src_bytes: 8.99 GB
+src_langs: '[["az", 88825718], ["en", 16410043], ["tr", 10994621], ["de", 3833355],
+  ["fr", 3375475], ["ru", 2099896], ["es", 1311306], ["it", 1065705], ["fa", 1005304],
+  ["sv", 780144], ["nl", 703043], ["uz", 596840], ["zh", 578855], ["pt", 452281],
+  ["cs", 418366], ["id", 412338], ["eo", 400106], ["hbs_lat", 398655], ["hu", 397642],
+  ["pl", 346593], ["ja", 335948], ["nb", 273809], ["et", 265735], ["ca", 243611],
+  ["ro", 230755], ["fi", 221048], ["ceb", 216517], ["lt", 201025], ["uk", 199607],
+  ["ms", 194421], ["eu", 187248], ["da", 184265], ["sl", 125142], ["oc", 118683],
+  ["hy", 118575], ["nds", 112026], ["sk", 94445], ["ar", 91476], ["ur", 89160], ["af",
+  88509], ["ta", 80407], ["so", 77037], ["tl", 76681], ["ko", 66894], ["tt", 61119],
+  ["el", 60471], ["la", 55502], ["fy", 53099], ["sq", 48289], ["pnb", 47169], ["vo",
+  47064], ["mr", 44528], ["io", 41317], ["kn", 34208], ["sa", 33965], ["jbo", 32204],
+  ["bg", 31415], ["ka", 23241], ["vi", 23127], ["hi", 22352], ["th", 20343], ["gl",
+  20259], ["azb", 20171], ["os", 18700], ["jv", 18195], ["lb", 17865], ["su", 17313],
+  ["br", 17239], ["mk", 17119], ["he", 16928], ["hbs_cyr", 16876], ["bn", 15996],
+  ["war", 14615], ["sw", 14512], ["bar", 14012], ["lv", 13873], ["nn", 13150], ["my",
+  12429], ["ba", 10975], ["min", 10609], ["als", 10496], ["kk", 10341], ["be", 10050],
+  ["mn", 9997], ["gu", 9576], ["ku", 9318], ["hsb", 8652], ["ne", 8217], ["cy", 7940],
+  ["diq", 7429], ["km", 7373], ["ky", 7073], ["te", 6949], ["am", 6285], ["sah", 5923],
+  ["is", 5658], ["mzn", 5361], ["tg", 5040], ["mt", 4758], ["cv", 4709], ["ps", 4646],
+  ["ml", 4612], ["ilo", 4297], ["scn", 3905], ["tk", 3831], ["kw", 3336], ["yi", 3179],
+  ["ia", 3040], ["mwl", 3028], ["arz", 2983], ["ast", 2979], ["qu", 2865], ["ug",
+  2504], ["si", 2426], ["ga", 2358], ["gd", 2347], ["ie", 2261], ["rm", 1910], ["pa",
+  1840], ["cbk", 1740], ["wuu", 1693], ["ce", 1636], ["pms", 1624], ["ckb", 1464],
+  ["lez", 1083], ["an", 1073], ["ht", 1008], ["xmf", 952], ["vls", 882], ["lmo", 874],
+  ["mg", 867], ["sd", 775], ["li", 736], ["yue", 721], ["or", 688], ["gv", 687], ["bcl",
+  668], ["bo", 649], ["kv", 624], ["krc", 607], ["lo", 596], ["as", 571], ["mhr",
+  558], ["pam", 519], ["gn", 518], ["bh", 491], ["dv", 463], ["sco", 441], ["new",
+  397], ["wa", 350], ["myv", 317], ["sc", 275], ["gom", 220], ["eml", 189], ["bpy",
+  153], ["xal", 131], ["mai", 121], ["dsb", 102], ["mrj", 93], ["hif", 81], ["nap",
+  72], ["vep", 51], ["co", 50], ["vec", 41], ["tyv", 31], ["av", 27], ["bxr", 25],
+  ["lrc", 24], ["nah", 23], ["yo", 22], ["frr", 19], ["pfl", 10], ["dty", 4]]'
 src_sent_tokens: '[[0, 3193803], [1, 27105417], [2, 15671616], [3, 10914390], [4,
   7277332], [5, 9259828], [6, 7603438], [7, 6444330], [8, 6436525], [9, 6153124],
   [10, 5091995], [11, 4109348], [12, 3472561], [13, 3019330], [14, 2496206], [15,
